Learnings/Kubernetes/4-ingress/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-app
  ports:
    - port: 4001
      targetPort: 4001
